--- a/barbearia/pom.xml
+++ b/barbearia/pom.xml
@@ -55,6 +55,14 @@
 		    <artifactId>spring-boot-devtools</artifactId>
 		    <version>2.3.1.RELEASE</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+		    <version>0.9.0</version>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
